fixed bug header  overlapping the picture and buttons style

--- a/css/style.css
+++ b/css/style.css
@@ -149,14 +149,6 @@ nav {
   justify-content: end;
 }
 
-/* .menu-background {
-  display: none;
-  width: 100%;
-  background-color: --footer-header;
-  height: 50vh;
-  transition: transform 0.5s ease-in;
-} */
-
 .menu-background--Active {
   display: block;
 }
@@ -325,11 +317,9 @@ button,
   display: inline-block;
   border-radius: 3px;
   padding: 7px 12px;
-  border: 1px solid #d5d5d5;
+  border: none;
   color: #fff;
-  background: #569e3d linear-gradient(#82e262, #529b39) repeat-x;
-  border-color: #4a993e;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  background: #569e3d;
   text-decoration: none;
   transition: 0.7s opacity;
 }
@@ -467,6 +457,10 @@ button:focus,
   justify-content: space-around;
   align-items: center;
   padding: 20px;
+  flex-wrap: wrap;
+}
+.work__buttons a {
+  padding: 10px;
 }
 
 /* work js functionality */
@@ -556,7 +550,7 @@ button:focus,
 
 /* header media query */
 
-@media all and (min-width: 500px) and (max-width: 830px) {
+@media all and (min-width: 780px) and (max-width: 830px) {
   nav {
     width: 60%;
   }
@@ -581,7 +575,7 @@ button:focus,
   }
 }
 
-@media all and (max-width: 500px) {
+@media all and (max-width: 780px) {
   main {
     margin-top: 12vh;
   }
